--- a/Navigation-Drawer/app/src/main/res/values/strings.xml
+++ b/Navigation-Drawer/app/src/main/res/values/strings.xml
@@ -11,4 +11,13 @@
 
     <string name="defaultDuration">0:00</string>
     <string name="title_activity_firebase_video_list">firebase_video_list</string>
+    <string name="title_activity_firebase_authentication">Sign in</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 </resources>
